grammar.js
    module: $ => seq(optional($.run_directive), repeat($._statement)),

    integer: $ => choice(
      seq(
        choice("0x", "0X"),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional($.c_integer_type),
      ),
      seq(
        choice("0o", "0O"),
        repeat1(/_?[0-7]+/),
        optional($.c_integer_type),
      ),
      seq(
        choice("0b", "0B"),
        repeat1(/_?[0-1]+/),
        optional($.c_integer_type),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional($.c_integer_type), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    ),

    // Cython allows 'cimport'
    import_statement: $ =>
      seq(
        choice("import", "cimport"),
        $._import_list,
      ),

    import_from_statement: $ =>
      seq(
        "from",
        field(
          "module_name",
          choice(
            $.relative_import,
            $.dotted_name,
          ),
        ),
        choice("import", "cimport"),
        choice(
          $.wildcard_import,
          $._import_list,
          seq("(", $._import_list, ")"),
        ),
      ),

    class_definition: $ =>
      seq(
        repeat($.storageclass),
        "class",
        field("name", $.identifier),
        repeat(seq(".", $.identifier)),
        optional(seq("(", $.c_type, ")")),
        choice(
          field("name_specification", $.external_definition),
          seq(
            field("superclasses", optional($.argument_list)),
            ":",
            field("body", $._suite),
          ),
          seq(
            field("superclasses", optional($.argument_list)),
            field("name_specification", $.external_definition),
            ":",
            field("body", $._suite),
          ),
          $._newline,
        ),
      ),
    external_definition: $ =>
      seq(
        "[",
        commaSep1(seq(choice("object", "type"), $.c_type)),
        "]",
      ),

    cdef_statement: $ =>
      seq(
        choice("cdef", "cpdef"),
        choice(
          $.cvar_def,
          $.cdef_type_declaration,
          $.extern_block,
          $.cdef_definition_block,
        ),
      ),

    cdef_definition_block: $ =>
      seq(
        repeat($.storageclass),
        optional(choice($.identifier, $.keyword_identifier)),
        ":",
        $._indent,
        repeat1(choice($.cvar_def, $.ctypedef_statement, $.cdef_type_declaration, $.extern_block)),
        $._dedent,
      ),

    cvar_def: $ =>
      seq(
        repeat($.storageclass),
        $.maybe_typed_name,
        choice(
          seq(
            optional(seq("=", $.expression)),
            repeat(seq(
              ",",
              optional($.type_modifier),
              $.identifier,
              optional(seq("=", $.expression)),
            )),
            optional(","),
            $._newline,
          ),
          $.c_function_definition,
        ),
      ),

    cdef_type_declaration: $ => choice($.ctype_declaration, $.fused, $.class_definition),

    extern_block: $ =>
      seq(
        "extern",
        optional(seq(
          "from",
          choice($.string, "*"),
          optional(seq("namespace", $.string)),
          optional("nogil"),
        )),
        choice(
          seq(":", $.extern_suite),
          $.class_definition,
          $.cvar_def,
        ),
      ),

    extern_suite: $ =>
      choice(
        $.pass_statement,
        seq(
          $._indent,
          choice(
            repeat1(choice(
              seq(
                optional(choice("cdef", "cpdef")),
                choice($.cvar_decl, $.cdef_type_declaration),
              ),
              $.ctypedef_statement,
              $.string,
            )),
            $.pass_statement,
          ),
          $._dedent,
        ),
        alias($._newline, $.block),
      ),

    ctype_declaration: $ => choice($.struct, $.enum, $.cppclass),

    cvar_decl: $ =>
      seq(
        repeat($.storageclass),
        $.c_type,
        optional(seq($.c_name, optional(field("alias", $.string)))),
        choice(
          seq(
            $.identifier,
            optional(field("alias", $.string)),
            repeat($.type_index),
            optional(seq("=", $.expression)),
            repeat(seq(
              ",",
              $.identifier,
              optional(field("alias", $.string)),
              optional(seq("=", $.expression)),
            )),
            $._newline,
          ),
          $.c_function_definition,
        ),
      ),

    int_type: $ =>
      prec.right(choice(
        seq(
          $._signedness,
          optional($._longness),
        ),
        $._longness,
        seq(
          optional($._signedness),
          optional($._longness),
          choice("int", "double"),
        ),
        "complex",
      )),

    _signedness: _ => choice("signed", "unsigned"),
    _longness: _ =>
      prec.right(choice(
        "char",
        "short",
        "long",
        alias(seq("long", "long"), "long long"),
      )),

    type_qualifier: $ =>
      repeat1(choice("const", "volatile")),

    // type: ['const'] (NAME ('.' PY_NAME)* | int_type | '(' type ')') ['complex'] [type_modifier]
    c_type: $ =>
      prec.right(
        PREC.c_type,
        seq(
          optional($.type_qualifier),
          choice(
            seq(
              field("type", $.identifier),
              repeat(seq(
                ".",
                $.identifier,
              )),
            ),
            $.int_type,
            seq("(", $.c_type, ")"),
          ),
          optional("complex"),
          repeat($.type_modifier),
        ),
      ),

    c_name: $ =>
      seq(optional($.type_modifier), $.identifier),

    maybe_typed_name: $ =>
      choice(
        seq(
          optional($.type_qualifier),
          field("type", choice($.identifier, $.int_type)),
          optional(seq(
            repeat(seq(
              ".",
              $.identifier,
            )),
            optional("complex"),
            repeat($.type_modifier),
          )),
          field("name", optional(choice($.identifier, $.operator_name, $.c_function_pointer_name))),
          repeat($.type_modifier),
        ),
        seq(
          optional($.type_qualifier),
          field("name", choice($.identifier, $.operator_name)),
          repeat($.type_modifier),
        ),
      ),

    c_function_pointer_name: $ =>
      seq("(", "*", $.c_identifier, ")"),

    c_function_pointer_type: $ =>
      seq(
        $.c_type,
        $.c_function_pointer_name,
        $.c_parameters,
      ),

    // type_modifier: '*' | '**' | '&' | type_index ('.' NAME [type_index])*
    type_index: $ =>
      seq(
        "[",
        optional(choice(
          $.integer,
          commaSep1(seq($.c_type, optional(seq("=", $.expression)))),
          commaSep1($.memory_view_index),
        )),
        "]",
      ),
    memory_view_index: $ =>
      seq(
        ":",
        optional($.expression),
        optional(seq(
          ":",
          optional($.expression),
        )),
      ),

    ctypedef_statement: $ =>
      seq(
        repeat($.storageclass),
        "ctypedef",
        choice($.cvar_decl, $.c_function_pointer_type, $.struct, $.enum, $.fused, $.class_definition, $.extern_block),
        optional(";"),
      ),

    c_function_definition: $ =>
      seq(
        optional($.template_params),
        $.c_parameters,
        optional($.gil_spec),
        optional($.exception_value),
        optional($.gil_spec),
        optional("const"),
        choice(
          seq(":", $._suite),
          $._newline,
        ),
      ),

    template_default: $ =>
      seq("=", "*"),

    template_param: $ =>
      seq($.identifier, optional($.template_default)),

    template_params: $ =>
      seq(
        "[",
        commaSep1($.template_param),
        "]",
      ),

    c_parameters: $ => seq("(", optional($._typedargslist), ")"),

    // e.g.
    // int (*)(const char, int)
    // int (*func)(const char, int)
    c_function_argument_type: $ =>
      seq($.c_type, "(", "*", optional($.identifier), ")", $.c_parameters),

    _typedargslist: $ =>
      choice(
        "...",
        seq(
          commaSep1(choice($._typedargument, $.c_function_argument_type)),
          optional(seq(",", "...")),
          optional(","),
        ),
      ),

    typed_parameter: $ =>
      prec(
        PREC.typed_parameter,
        choice(
          seq(
            field("type", $.c_type),
            choice(
              seq($.identifier, optional($.type_index)),
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
            optional(seq(
              choice("not", "or"),
              "None",
            )),
          ),
          seq(
            choice(
              $.identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
            ":",
            field("type", choice($.c_type, $.string)),
          ),
        ),
      ),

    struct: $ =>
      seq(
        repeat($.storageclass),
        choice("struct", "union"),
        $.identifier,
        optional(field("alias", $.string)),
        choice($._newline, seq(":", $.struct_suite)),
      ),
    struct_suite: $ =>
      choice(
        $.pass_statement,
        seq(
          $._indent,
          choice(
            repeat($.cvar_decl),
            $.pass_statement,
          ),
          $._dedent,
        ),
        alias($._newline, $.block),
      ),

    enum: $ =>
      seq(
        repeat($.storageclass),
        "enum",
        optional(choice("class", "struct")),
        optional(
          seq(
            $.identifier,
            optional(seq("(", $.c_type, ")")),
            optional(seq(":", $.c_type)),
          ),
        ),
        choice($._newline, seq(":", $._suite)),
      ),

    // Optional alias used in underlying C library
    cppclass: $ =>
      seq(
        "cppclass",
        $.c_identifier,
        optional($.template_params),
        optional("nogil"),
        choice($._newline, seq(":", $._cppclass_suite)),
      ),

    _cppclass_suite: $ =>
      choice(
        $.pass_statement,
        seq(
          $._indent,
          repeat(choice(
            $.ctypedef_statement,
            $.cvar_def,
            $.cppclass,
          )),
          $._dedent,
        ),
      ),

    fused: $ =>
      seq(
        "fused",
        $.identifier,
        ":",
        $._indent,
        repeat(seq(
          $.c_type,
          $._newline,
        )),
        $._dedent,
      ),

    storageclass: _ => choice("public", "packed", "inline", "api", "readonly"),

    sizeof_expression: $ =>
      prec(
        PREC.new,
        seq(
          "sizeof",
          "(",
          choice($.c_function_argument_type, $.c_type, $.expression),
          ")",
        ),
      ),

    for_in_loop: $ =>
      seq(
        field("left", $._left_hand_side),
        "in",
        field("right", commaSep1($.primary_expression)),
      ),

    for_statement: $ =>
      seq(
        optional("async"),
        "for",
        choice($.for_from_loop, $.for_in_loop),
        ":",
        field("body", $._suite),
        field("alternative", optional($.else_clause)),
      ),
